// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Product data table > when on the any other page > should have match snapshot 1`] = `
<div>
  <div
    class="w-full h-full"
  >
    <div
      class="w-full h-[75%] md:h-[86%] grid p-4 gap-5 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 xl:grid-rows-3 overflow-y-scroll xl:overflow-hidden"
    >
      <div
        class="relative h-[326px] p-4 bg-white rounded-[10px] shadow flex-col justify-start items-start gap-[25px] inline-flex"
      >
        <div
          class="absolute left-0 flex w-12 h-12 top-0 items-center justify-center discount-container undefined invisible svelte-rta6ws"
        >
          <div
            class="text-white text-xs font-bold"
          >
            -
            null
            %
          </div>
        </div>
         
        <div
          class="w-[238px] h-[200px] mt-10 self-center justify-between items-center flex"
        >
          <img
            alt="product-1"
            class="w-[238px] h-[200px] object-contain scale"
            src="an-image-url"
            width="160"
          />
        </div>
         
        <div
          class="w-full absolute flex justify-end top-0 right-0"
        >
          <div
            class="min-w-[40px] h-[50px] px-1 bg-white rounded-bl-[10px] rounded-tr-[10px] shadow justify-center items-center gap-2.5 inline-flex"
            role="region"
          >
             
            <button
              class="px-2 py-1 focus:outline-none"
            >
              <div
                class="h-6 w-6"
              >
                <svg
                  fill="none"
                  height="26"
                  viewBox="0 0 18 26"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1 8.33334H2.77778L3.13333 10.1111M3.13333 10.1111H17L13.4444 17.2222H4.55556M3.13333 10.1111L4.55556 17.2222M4.55556 17.2222L2.51743 19.2604C1.95746 19.8204 2.35405 20.7778 3.14596 20.7778H13.4444M13.4444 20.7778C12.4626 20.7778 11.6667 21.5737 11.6667 22.5556C11.6667 23.5374 12.4626 24.3333 13.4444 24.3333C14.4263 24.3333 15.2222 23.5374 15.2222 22.5556C15.2222 21.5737 14.4263 20.7778 13.4444 20.7778ZM9.88889 1.66667V8.33334M6.33333 5.00001H13.4444M6.33333 22.5556C6.33333 23.5374 5.5374 24.3333 4.55556 24.3333C3.57372 24.3333 2.77778 23.5374 2.77778 22.5556C2.77778 21.5737 3.57372 20.7778 4.55556 20.7778C5.5374 20.7778 6.33333 21.5737 6.33333 22.5556Z"
                    id="Add Button"
                    stroke="#0A3B2F"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
         
        <div
          class="w-full flex-col justify-start items-start gap-2.5 flex"
        >
          <div
            class="w-full justify-between items-center flex"
          >
            <div
              class="text-accent pl-1.5 overflow-hidden max-h-[35px]"
            >
              product-1
            </div>
             
            <div
              class="text-primary text-15 flex ml-3"
            >
              CAD$
              1
              .
              00
               
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative h-[326px] p-4 bg-white rounded-[10px] shadow flex-col justify-start items-start gap-[25px] inline-flex"
      >
        <div
          class="absolute left-0 flex w-12 h-12 top-0 items-center justify-center discount-container undefined invisible svelte-rta6ws"
        >
          <div
            class="text-white text-xs font-bold"
          >
            -
            null
            %
          </div>
        </div>
         
        <div
          class="w-[238px] h-[200px] mt-10 self-center justify-between items-center flex"
        >
          <img
            alt="product-2"
            class="w-[238px] h-[200px] object-contain scale"
            src="an-image-url"
            width="160"
          />
        </div>
         
        <div
          class="w-full absolute flex justify-end top-0 right-0"
        >
          <div
            class="min-w-[40px] h-[50px] px-1 bg-white rounded-bl-[10px] rounded-tr-[10px] shadow justify-center items-center gap-2.5 inline-flex"
            role="region"
          >
             
            <button
              class="px-2 py-1 focus:outline-none"
            >
              <div
                class="h-6 w-6"
              >
                <svg
                  fill="none"
                  height="26"
                  viewBox="0 0 18 26"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1 8.33334H2.77778L3.13333 10.1111M3.13333 10.1111H17L13.4444 17.2222H4.55556M3.13333 10.1111L4.55556 17.2222M4.55556 17.2222L2.51743 19.2604C1.95746 19.8204 2.35405 20.7778 3.14596 20.7778H13.4444M13.4444 20.7778C12.4626 20.7778 11.6667 21.5737 11.6667 22.5556C11.6667 23.5374 12.4626 24.3333 13.4444 24.3333C14.4263 24.3333 15.2222 23.5374 15.2222 22.5556C15.2222 21.5737 14.4263 20.7778 13.4444 20.7778ZM9.88889 1.66667V8.33334M6.33333 5.00001H13.4444M6.33333 22.5556C6.33333 23.5374 5.5374 24.3333 4.55556 24.3333C3.57372 24.3333 2.77778 23.5374 2.77778 22.5556C2.77778 21.5737 3.57372 20.7778 4.55556 20.7778C5.5374 20.7778 6.33333 21.5737 6.33333 22.5556Z"
                    id="Add Button"
                    stroke="#0A3B2F"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
         
        <div
          class="w-full flex-col justify-start items-start gap-2.5 flex"
        >
          <div
            class="w-full justify-between items-center flex"
          >
            <div
              class="text-accent pl-1.5 overflow-hidden max-h-[35px]"
            >
              product-2
            </div>
             
            <div
              class="text-primary text-15 flex ml-3"
            >
              CAD$
              8
              .
              00
               
              <span>
                /
                kg
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative h-[326px] p-4 bg-white rounded-[10px] shadow flex-col justify-start items-start gap-[25px] inline-flex"
      >
        <div
          class="absolute left-0 flex w-12 h-12 top-0 items-center justify-center discount-container undefined invisible svelte-rta6ws"
        >
          <div
            class="text-white text-xs font-bold"
          >
            -
            null
            %
          </div>
        </div>
         
        <div
          class="w-[238px] h-[200px] mt-10 self-center justify-between items-center flex"
        >
          <img
            alt="product-3"
            class="w-[238px] h-[200px] object-contain scale"
            src="an-image-url"
            width="160"
          />
        </div>
         
        <div
          class="w-full absolute flex justify-end top-0 right-0"
        >
          <div
            class="min-w-[40px] h-[50px] px-1 bg-white rounded-bl-[10px] rounded-tr-[10px] shadow justify-center items-center gap-2.5 inline-flex"
            role="region"
          >
             
            <button
              class="px-2 py-1 focus:outline-none"
            >
              <div
                class="h-6 w-6"
              >
                <svg
                  fill="none"
                  height="26"
                  viewBox="0 0 18 26"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1 8.33334H2.77778L3.13333 10.1111M3.13333 10.1111H17L13.4444 17.2222H4.55556M3.13333 10.1111L4.55556 17.2222M4.55556 17.2222L2.51743 19.2604C1.95746 19.8204 2.35405 20.7778 3.14596 20.7778H13.4444M13.4444 20.7778C12.4626 20.7778 11.6667 21.5737 11.6667 22.5556C11.6667 23.5374 12.4626 24.3333 13.4444 24.3333C14.4263 24.3333 15.2222 23.5374 15.2222 22.5556C15.2222 21.5737 14.4263 20.7778 13.4444 20.7778ZM9.88889 1.66667V8.33334M6.33333 5.00001H13.4444M6.33333 22.5556C6.33333 23.5374 5.5374 24.3333 4.55556 24.3333C3.57372 24.3333 2.77778 23.5374 2.77778 22.5556C2.77778 21.5737 3.57372 20.7778 4.55556 20.7778C5.5374 20.7778 6.33333 21.5737 6.33333 22.5556Z"
                    id="Add Button"
                    stroke="#0A3B2F"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
         
        <div
          class="w-full flex-col justify-start items-start gap-2.5 flex"
        >
          <div
            class="w-full justify-between items-center flex"
          >
            <div
              class="text-accent pl-1.5 overflow-hidden max-h-[35px]"
            >
              product-3
            </div>
             
            <div
              class="text-primary text-15 flex ml-3"
            >
              CAD$
              12
              .
              00
               
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="h-[12%] md:h-[6%] bg-white flex justify-center xl:justify-end visible"
    >
      <div
        class="flex w-full xl:w-1/4 space-x-2 xl:pr-5 justify-center xl:justify-end items-center"
      >
        <button
          class="w-14 h-12 xl:w-10 xl:h-8 flex justify-center items-center border border-orange-500 text-2xl xl:text-lg text-orange-500 font-thin rounded-sm disabled:border disabled:border-gray-500 disabled:text-gray-500"
        >
          <svg
            height="1.2em"
            viewBox="0 0 24 24"
            width="1.2em"
          >
            <path
              d="M18.41 7.41L17 6l-6 6l6 6l1.41-1.41L13.83 12zm-6 0L11 6l-6 6l6 6l1.41-1.41L7.83 12z"
              fill="currentColor"
            />
          </svg>
        </button>
         
        <button
          class="w-14 h-12 xl:w-10 xl:h-8 flex justify-center items-center border border-orange-500 text-2xl xl:text-lg text-orange-500 font-thin rounded-sm disabled:border disabled:border-gray-500 disabled:text-gray-500"
        >
          <svg
            height="1.2em"
            viewBox="0 0 24 24"
            width="1.2em"
          >
            <path
              d="M15.41 16.58L10.83 12l4.58-4.59L14 6l-6 6l6 6z"
              fill="currentColor"
            />
          </svg>
        </button>
         
        <button
          class="w-14 h-12 xl:w-10 xl:h-8 border border-white text-white bg-orange-500 text-lg xl:text-sm font-thin rounded-sm"
        >
          5
        </button>
         
        <div
          class="w-14 h-12 xl:w-10 xl:h-8 flex justify-center items-center font-thin text-lg text-gray-500"
        >
          of 
          25
        </div>
         
        <button
          class="w-14 h-12 xl:w-10 xl:h-8 flex justify-center items-center border border-orange-500 text-2xl xl:text-lg text-orange-500 font-thin rounded-sm disabled:border disabled:border-gray-500 disabled:text-gray-500"
        >
          <svg
            height="1.2em"
            viewBox="0 0 24 24"
            width="1.2em"
          >
            <path
              d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6z"
              fill="currentColor"
            />
          </svg>
        </button>
         
        <button
          class="w-14 h-12 xl:w-10 xl:h-8 flex justify-center items-center border border-orange-500 text-2xl xl:text-lg text-orange-500 font-thin rounded-sm disabled:border disabled:border-gray-500 disabled:text-gray-500"
        >
          <svg
            height="1.2em"
            viewBox="0 0 24 24"
            width="1.2em"
          >
            <path
              d="M5.59 7.41L7 6l6 6l-6 6l-1.41-1.41L10.17 12zm6 0L13 6l6 6l-6 6l-1.41-1.41L16.17 12z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Product data table > when on the first page > should have match snapshot 1`] = `
<div>
  <div
    class="w-full h-full"
  >
    <div
      class="w-full h-[75%] md:h-[86%] grid p-4 gap-5 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 xl:grid-rows-3 overflow-y-scroll xl:overflow-hidden"
    >
      <div
        class="relative h-[326px] p-4 bg-white rounded-[10px] shadow flex-col justify-start items-start gap-[25px] inline-flex"
      >
        <div
          class="absolute left-0 flex w-12 h-12 top-0 items-center justify-center discount-container undefined invisible svelte-rta6ws"
        >
          <div
            class="text-white text-xs font-bold"
          >
            -
            null
            %
          </div>
        </div>
         
        <div
          class="w-[238px] h-[200px] mt-10 self-center justify-between items-center flex"
        >
          <img
            alt="product-1"
            class="w-[238px] h-[200px] object-contain scale"
            src="an-image-url"
            width="160"
          />
        </div>
         
        <div
          class="w-full absolute flex justify-end top-0 right-0"
        >
          <div
            class="min-w-[40px] h-[50px] px-1 bg-white rounded-bl-[10px] rounded-tr-[10px] shadow justify-center items-center gap-2.5 inline-flex"
            role="region"
          >
             
            <button
              class="px-2 py-1 focus:outline-none"
            >
              <div
                class="h-6 w-6"
              >
                <svg
                  fill="none"
                  height="26"
                  viewBox="0 0 18 26"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1 8.33334H2.77778L3.13333 10.1111M3.13333 10.1111H17L13.4444 17.2222H4.55556M3.13333 10.1111L4.55556 17.2222M4.55556 17.2222L2.51743 19.2604C1.95746 19.8204 2.35405 20.7778 3.14596 20.7778H13.4444M13.4444 20.7778C12.4626 20.7778 11.6667 21.5737 11.6667 22.5556C11.6667 23.5374 12.4626 24.3333 13.4444 24.3333C14.4263 24.3333 15.2222 23.5374 15.2222 22.5556C15.2222 21.5737 14.4263 20.7778 13.4444 20.7778ZM9.88889 1.66667V8.33334M6.33333 5.00001H13.4444M6.33333 22.5556C6.33333 23.5374 5.5374 24.3333 4.55556 24.3333C3.57372 24.3333 2.77778 23.5374 2.77778 22.5556C2.77778 21.5737 3.57372 20.7778 4.55556 20.7778C5.5374 20.7778 6.33333 21.5737 6.33333 22.5556Z"
                    id="Add Button"
                    stroke="#0A3B2F"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
         
        <div
          class="w-full flex-col justify-start items-start gap-2.5 flex"
        >
          <div
            class="w-full justify-between items-center flex"
          >
            <div
              class="text-accent pl-1.5 overflow-hidden max-h-[35px]"
            >
              product-1
            </div>
             
            <div
              class="text-primary text-15 flex ml-3"
            >
              CAD$
              1
              .
              00
               
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative h-[326px] p-4 bg-white rounded-[10px] shadow flex-col justify-start items-start gap-[25px] inline-flex"
      >
        <div
          class="absolute left-0 flex w-12 h-12 top-0 items-center justify-center discount-container undefined invisible svelte-rta6ws"
        >
          <div
            class="text-white text-xs font-bold"
          >
            -
            null
            %
          </div>
        </div>
         
        <div
          class="w-[238px] h-[200px] mt-10 self-center justify-between items-center flex"
        >
          <img
            alt="product-2"
            class="w-[238px] h-[200px] object-contain scale"
            src="an-image-url"
            width="160"
          />
        </div>
         
        <div
          class="w-full absolute flex justify-end top-0 right-0"
        >
          <div
            class="min-w-[40px] h-[50px] px-1 bg-white rounded-bl-[10px] rounded-tr-[10px] shadow justify-center items-center gap-2.5 inline-flex"
            role="region"
          >
             
            <button
              class="px-2 py-1 focus:outline-none"
            >
              <div
                class="h-6 w-6"
              >
                <svg
                  fill="none"
                  height="26"
                  viewBox="0 0 18 26"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1 8.33334H2.77778L3.13333 10.1111M3.13333 10.1111H17L13.4444 17.2222H4.55556M3.13333 10.1111L4.55556 17.2222M4.55556 17.2222L2.51743 19.2604C1.95746 19.8204 2.35405 20.7778 3.14596 20.7778H13.4444M13.4444 20.7778C12.4626 20.7778 11.6667 21.5737 11.6667 22.5556C11.6667 23.5374 12.4626 24.3333 13.4444 24.3333C14.4263 24.3333 15.2222 23.5374 15.2222 22.5556C15.2222 21.5737 14.4263 20.7778 13.4444 20.7778ZM9.88889 1.66667V8.33334M6.33333 5.00001H13.4444M6.33333 22.5556C6.33333 23.5374 5.5374 24.3333 4.55556 24.3333C3.57372 24.3333 2.77778 23.5374 2.77778 22.5556C2.77778 21.5737 3.57372 20.7778 4.55556 20.7778C5.5374 20.7778 6.33333 21.5737 6.33333 22.5556Z"
                    id="Add Button"
                    stroke="#0A3B2F"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
         
        <div
          class="w-full flex-col justify-start items-start gap-2.5 flex"
        >
          <div
            class="w-full justify-between items-center flex"
          >
            <div
              class="text-accent pl-1.5 overflow-hidden max-h-[35px]"
            >
              product-2
            </div>
             
            <div
              class="text-primary text-15 flex ml-3"
            >
              CAD$
              8
              .
              00
               
              <span>
                /
                kg
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative h-[326px] p-4 bg-white rounded-[10px] shadow flex-col justify-start items-start gap-[25px] inline-flex"
      >
        <div
          class="absolute left-0 flex w-12 h-12 top-0 items-center justify-center discount-container undefined invisible svelte-rta6ws"
        >
          <div
            class="text-white text-xs font-bold"
          >
            -
            null
            %
          </div>
        </div>
         
        <div
          class="w-[238px] h-[200px] mt-10 self-center justify-between items-center flex"
        >
          <img
            alt="product-3"
            class="w-[238px] h-[200px] object-contain scale"
            src="an-image-url"
            width="160"
          />
        </div>
         
        <div
          class="w-full absolute flex justify-end top-0 right-0"
        >
          <div
            class="min-w-[40px] h-[50px] px-1 bg-white rounded-bl-[10px] rounded-tr-[10px] shadow justify-center items-center gap-2.5 inline-flex"
            role="region"
          >
             
            <button
              class="px-2 py-1 focus:outline-none"
            >
              <div
                class="h-6 w-6"
              >
                <svg
                  fill="none"
                  height="26"
                  viewBox="0 0 18 26"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1 8.33334H2.77778L3.13333 10.1111M3.13333 10.1111H17L13.4444 17.2222H4.55556M3.13333 10.1111L4.55556 17.2222M4.55556 17.2222L2.51743 19.2604C1.95746 19.8204 2.35405 20.7778 3.14596 20.7778H13.4444M13.4444 20.7778C12.4626 20.7778 11.6667 21.5737 11.6667 22.5556C11.6667 23.5374 12.4626 24.3333 13.4444 24.3333C14.4263 24.3333 15.2222 23.5374 15.2222 22.5556C15.2222 21.5737 14.4263 20.7778 13.4444 20.7778ZM9.88889 1.66667V8.33334M6.33333 5.00001H13.4444M6.33333 22.5556C6.33333 23.5374 5.5374 24.3333 4.55556 24.3333C3.57372 24.3333 2.77778 23.5374 2.77778 22.5556C2.77778 21.5737 3.57372 20.7778 4.55556 20.7778C5.5374 20.7778 6.33333 21.5737 6.33333 22.5556Z"
                    id="Add Button"
                    stroke="#0A3B2F"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
         
        <div
          class="w-full flex-col justify-start items-start gap-2.5 flex"
        >
          <div
            class="w-full justify-between items-center flex"
          >
            <div
              class="text-accent pl-1.5 overflow-hidden max-h-[35px]"
            >
              product-3
            </div>
             
            <div
              class="text-primary text-15 flex ml-3"
            >
              CAD$
              12
              .
              00
               
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="h-[12%] md:h-[6%] bg-white flex justify-center xl:justify-end visible"
    >
      <div
        class="flex w-full xl:w-1/4 space-x-2 xl:pr-5 justify-center xl:justify-end items-center"
      >
        <button
          class="w-14 h-12 xl:w-10 xl:h-8 flex justify-center items-center border border-orange-500 text-2xl xl:text-lg text-orange-500 font-thin rounded-sm disabled:border disabled:border-gray-500 disabled:text-gray-500"
          disabled=""
        >
          <svg
            height="1.2em"
            viewBox="0 0 24 24"
            width="1.2em"
          >
            <path
              d="M18.41 7.41L17 6l-6 6l6 6l1.41-1.41L13.83 12zm-6 0L11 6l-6 6l6 6l1.41-1.41L7.83 12z"
              fill="currentColor"
            />
          </svg>
        </button>
         
        <button
          class="w-14 h-12 xl:w-10 xl:h-8 flex justify-center items-center border border-orange-500 text-2xl xl:text-lg text-orange-500 font-thin rounded-sm disabled:border disabled:border-gray-500 disabled:text-gray-500"
          disabled=""
        >
          <svg
            height="1.2em"
            viewBox="0 0 24 24"
            width="1.2em"
          >
            <path
              d="M15.41 16.58L10.83 12l4.58-4.59L14 6l-6 6l6 6z"
              fill="currentColor"
            />
          </svg>
        </button>
         
        <button
          class="w-14 h-12 xl:w-10 xl:h-8 border border-white text-white bg-orange-500 text-lg xl:text-sm font-thin rounded-sm"
        >
          1
        </button>
         
        <div
          class="w-14 h-12 xl:w-10 xl:h-8 flex justify-center items-center font-thin text-lg text-gray-500"
        >
          of 
          25
        </div>
         
        <button
          class="w-14 h-12 xl:w-10 xl:h-8 flex justify-center items-center border border-orange-500 text-2xl xl:text-lg text-orange-500 font-thin rounded-sm disabled:border disabled:border-gray-500 disabled:text-gray-500"
        >
          <svg
            height="1.2em"
            viewBox="0 0 24 24"
            width="1.2em"
          >
            <path
              d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6z"
              fill="currentColor"
            />
          </svg>
        </button>
         
        <button
          class="w-14 h-12 xl:w-10 xl:h-8 flex justify-center items-center border border-orange-500 text-2xl xl:text-lg text-orange-500 font-thin rounded-sm disabled:border disabled:border-gray-500 disabled:text-gray-500"
        >
          <svg
            height="1.2em"
            viewBox="0 0 24 24"
            width="1.2em"
          >
            <path
              d="M5.59 7.41L7 6l6 6l-6 6l-1.41-1.41L10.17 12zm6 0L13 6l6 6l-6 6l-1.41-1.41L16.17 12z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Product data table > when on the last page > should have match snapshot 1`] = `
<div>
  <div
    class="w-full h-full"
  >
    <div
      class="w-full h-[75%] md:h-[86%] grid p-4 gap-5 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 xl:grid-rows-3 overflow-y-scroll xl:overflow-hidden"
    >
      <div
        class="relative h-[326px] p-4 bg-white rounded-[10px] shadow flex-col justify-start items-start gap-[25px] inline-flex"
      >
        <div
          class="absolute left-0 flex w-12 h-12 top-0 items-center justify-center discount-container undefined invisible svelte-rta6ws"
        >
          <div
            class="text-white text-xs font-bold"
          >
            -
            null
            %
          </div>
        </div>
         
        <div
          class="w-[238px] h-[200px] mt-10 self-center justify-between items-center flex"
        >
          <img
            alt="product-1"
            class="w-[238px] h-[200px] object-contain scale"
            src="an-image-url"
            width="160"
          />
        </div>
         
        <div
          class="w-full absolute flex justify-end top-0 right-0"
        >
          <div
            class="min-w-[40px] h-[50px] px-1 bg-white rounded-bl-[10px] rounded-tr-[10px] shadow justify-center items-center gap-2.5 inline-flex"
            role="region"
          >
             
            <button
              class="px-2 py-1 focus:outline-none"
            >
              <div
                class="h-6 w-6"
              >
                <svg
                  fill="none"
                  height="26"
                  viewBox="0 0 18 26"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1 8.33334H2.77778L3.13333 10.1111M3.13333 10.1111H17L13.4444 17.2222H4.55556M3.13333 10.1111L4.55556 17.2222M4.55556 17.2222L2.51743 19.2604C1.95746 19.8204 2.35405 20.7778 3.14596 20.7778H13.4444M13.4444 20.7778C12.4626 20.7778 11.6667 21.5737 11.6667 22.5556C11.6667 23.5374 12.4626 24.3333 13.4444 24.3333C14.4263 24.3333 15.2222 23.5374 15.2222 22.5556C15.2222 21.5737 14.4263 20.7778 13.4444 20.7778ZM9.88889 1.66667V8.33334M6.33333 5.00001H13.4444M6.33333 22.5556C6.33333 23.5374 5.5374 24.3333 4.55556 24.3333C3.57372 24.3333 2.77778 23.5374 2.77778 22.5556C2.77778 21.5737 3.57372 20.7778 4.55556 20.7778C5.5374 20.7778 6.33333 21.5737 6.33333 22.5556Z"
                    id="Add Button"
                    stroke="#0A3B2F"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
         
        <div
          class="w-full flex-col justify-start items-start gap-2.5 flex"
        >
          <div
            class="w-full justify-between items-center flex"
          >
            <div
              class="text-accent pl-1.5 overflow-hidden max-h-[35px]"
            >
              product-1
            </div>
             
            <div
              class="text-primary text-15 flex ml-3"
            >
              CAD$
              1
              .
              00
               
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative h-[326px] p-4 bg-white rounded-[10px] shadow flex-col justify-start items-start gap-[25px] inline-flex"
      >
        <div
          class="absolute left-0 flex w-12 h-12 top-0 items-center justify-center discount-container undefined invisible svelte-rta6ws"
        >
          <div
            class="text-white text-xs font-bold"
          >
            -
            null
            %
          </div>
        </div>
         
        <div
          class="w-[238px] h-[200px] mt-10 self-center justify-between items-center flex"
        >
          <img
            alt="product-2"
            class="w-[238px] h-[200px] object-contain scale"
            src="an-image-url"
            width="160"
          />
        </div>
         
        <div
          class="w-full absolute flex justify-end top-0 right-0"
        >
          <div
            class="min-w-[40px] h-[50px] px-1 bg-white rounded-bl-[10px] rounded-tr-[10px] shadow justify-center items-center gap-2.5 inline-flex"
            role="region"
          >
             
            <button
              class="px-2 py-1 focus:outline-none"
            >
              <div
                class="h-6 w-6"
              >
                <svg
                  fill="none"
                  height="26"
                  viewBox="0 0 18 26"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1 8.33334H2.77778L3.13333 10.1111M3.13333 10.1111H17L13.4444 17.2222H4.55556M3.13333 10.1111L4.55556 17.2222M4.55556 17.2222L2.51743 19.2604C1.95746 19.8204 2.35405 20.7778 3.14596 20.7778H13.4444M13.4444 20.7778C12.4626 20.7778 11.6667 21.5737 11.6667 22.5556C11.6667 23.5374 12.4626 24.3333 13.4444 24.3333C14.4263 24.3333 15.2222 23.5374 15.2222 22.5556C15.2222 21.5737 14.4263 20.7778 13.4444 20.7778ZM9.88889 1.66667V8.33334M6.33333 5.00001H13.4444M6.33333 22.5556C6.33333 23.5374 5.5374 24.3333 4.55556 24.3333C3.57372 24.3333 2.77778 23.5374 2.77778 22.5556C2.77778 21.5737 3.57372 20.7778 4.55556 20.7778C5.5374 20.7778 6.33333 21.5737 6.33333 22.5556Z"
                    id="Add Button"
                    stroke="#0A3B2F"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
         
        <div
          class="w-full flex-col justify-start items-start gap-2.5 flex"
        >
          <div
            class="w-full justify-between items-center flex"
          >
            <div
              class="text-accent pl-1.5 overflow-hidden max-h-[35px]"
            >
              product-2
            </div>
             
            <div
              class="text-primary text-15 flex ml-3"
            >
              CAD$
              8
              .
              00
               
              <span>
                /
                kg
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative h-[326px] p-4 bg-white rounded-[10px] shadow flex-col justify-start items-start gap-[25px] inline-flex"
      >
        <div
          class="absolute left-0 flex w-12 h-12 top-0 items-center justify-center discount-container undefined invisible svelte-rta6ws"
        >
          <div
            class="text-white text-xs font-bold"
          >
            -
            null
            %
          </div>
        </div>
         
        <div
          class="w-[238px] h-[200px] mt-10 self-center justify-between items-center flex"
        >
          <img
            alt="product-3"
            class="w-[238px] h-[200px] object-contain scale"
            src="an-image-url"
            width="160"
          />
        </div>
         
        <div
          class="w-full absolute flex justify-end top-0 right-0"
        >
          <div
            class="min-w-[40px] h-[50px] px-1 bg-white rounded-bl-[10px] rounded-tr-[10px] shadow justify-center items-center gap-2.5 inline-flex"
            role="region"
          >
             
            <button
              class="px-2 py-1 focus:outline-none"
            >
              <div
                class="h-6 w-6"
              >
                <svg
                  fill="none"
                  height="26"
                  viewBox="0 0 18 26"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1 8.33334H2.77778L3.13333 10.1111M3.13333 10.1111H17L13.4444 17.2222H4.55556M3.13333 10.1111L4.55556 17.2222M4.55556 17.2222L2.51743 19.2604C1.95746 19.8204 2.35405 20.7778 3.14596 20.7778H13.4444M13.4444 20.7778C12.4626 20.7778 11.6667 21.5737 11.6667 22.5556C11.6667 23.5374 12.4626 24.3333 13.4444 24.3333C14.4263 24.3333 15.2222 23.5374 15.2222 22.5556C15.2222 21.5737 14.4263 20.7778 13.4444 20.7778ZM9.88889 1.66667V8.33334M6.33333 5.00001H13.4444M6.33333 22.5556C6.33333 23.5374 5.5374 24.3333 4.55556 24.3333C3.57372 24.3333 2.77778 23.5374 2.77778 22.5556C2.77778 21.5737 3.57372 20.7778 4.55556 20.7778C5.5374 20.7778 6.33333 21.5737 6.33333 22.5556Z"
                    id="Add Button"
                    stroke="#0A3B2F"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
         
        <div
          class="w-full flex-col justify-start items-start gap-2.5 flex"
        >
          <div
            class="w-full justify-between items-center flex"
          >
            <div
              class="text-accent pl-1.5 overflow-hidden max-h-[35px]"
            >
              product-3
            </div>
             
            <div
              class="text-primary text-15 flex ml-3"
            >
              CAD$
              12
              .
              00
               
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="h-[12%] md:h-[6%] bg-white flex justify-center xl:justify-end visible"
    >
      <div
        class="flex w-full xl:w-1/4 space-x-2 xl:pr-5 justify-center xl:justify-end items-center"
      >
        <button
          class="w-14 h-12 xl:w-10 xl:h-8 flex justify-center items-center border border-orange-500 text-2xl xl:text-lg text-orange-500 font-thin rounded-sm disabled:border disabled:border-gray-500 disabled:text-gray-500"
        >
          <svg
            height="1.2em"
            viewBox="0 0 24 24"
            width="1.2em"
          >
            <path
              d="M18.41 7.41L17 6l-6 6l6 6l1.41-1.41L13.83 12zm-6 0L11 6l-6 6l6 6l1.41-1.41L7.83 12z"
              fill="currentColor"
            />
          </svg>
        </button>
         
        <button
          class="w-14 h-12 xl:w-10 xl:h-8 flex justify-center items-center border border-orange-500 text-2xl xl:text-lg text-orange-500 font-thin rounded-sm disabled:border disabled:border-gray-500 disabled:text-gray-500"
        >
          <svg
            height="1.2em"
            viewBox="0 0 24 24"
            width="1.2em"
          >
            <path
              d="M15.41 16.58L10.83 12l4.58-4.59L14 6l-6 6l6 6z"
              fill="currentColor"
            />
          </svg>
        </button>
         
        <button
          class="w-14 h-12 xl:w-10 xl:h-8 border border-white text-white bg-orange-500 text-lg xl:text-sm font-thin rounded-sm"
        >
          25
        </button>
         
        <div
          class="w-14 h-12 xl:w-10 xl:h-8 flex justify-center items-center font-thin text-lg text-gray-500"
        >
          of 
          25
        </div>
         
        <button
          class="w-14 h-12 xl:w-10 xl:h-8 flex justify-center items-center border border-orange-500 text-2xl xl:text-lg text-orange-500 font-thin rounded-sm disabled:border disabled:border-gray-500 disabled:text-gray-500"
          disabled=""
        >
          <svg
            height="1.2em"
            viewBox="0 0 24 24"
            width="1.2em"
          >
            <path
              d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6z"
              fill="currentColor"
            />
          </svg>
        </button>
         
        <button
          class="w-14 h-12 xl:w-10 xl:h-8 flex justify-center items-center border border-orange-500 text-2xl xl:text-lg text-orange-500 font-thin rounded-sm disabled:border disabled:border-gray-500 disabled:text-gray-500"
          disabled=""
        >
          <svg
            height="1.2em"
            viewBox="0 0 24 24"
            width="1.2em"
          >
            <path
              d="M5.59 7.41L7 6l6 6l-6 6l-1.41-1.41L10.17 12zm6 0L13 6l6 6l-6 6l-1.41-1.41L16.17 12z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Product data table > when there is no products > should have match snapshot 1`] = `
<div>
  <div
    class="w-full h-full"
  >
    <div
      class="w-full h-[87%] md:h-[86%] grid p-4 gap-5 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 xl:grid-rows-3 overflow-y-scroll xl:overflow-hidden"
    />
     
    <div
      class="h-[12%] md:h-[6%] bg-white flex justify-center xl:justify-end invisible sm:visible"
    >
      <div
        class="flex w-full xl:w-1/4 space-x-2 xl:pr-5 justify-center xl:justify-end items-center"
      >
        <button
          class="w-14 h-12 xl:w-10 xl:h-8 flex justify-center items-center border border-orange-500 text-2xl xl:text-lg text-orange-500 font-thin rounded-sm disabled:border disabled:border-gray-500 disabled:text-gray-500"
          disabled=""
        >
          <svg
            height="1.2em"
            viewBox="0 0 24 24"
            width="1.2em"
          >
            <path
              d="M18.41 7.41L17 6l-6 6l6 6l1.41-1.41L13.83 12zm-6 0L11 6l-6 6l6 6l1.41-1.41L7.83 12z"
              fill="currentColor"
            />
          </svg>
        </button>
         
        <button
          class="w-14 h-12 xl:w-10 xl:h-8 flex justify-center items-center border border-orange-500 text-2xl xl:text-lg text-orange-500 font-thin rounded-sm disabled:border disabled:border-gray-500 disabled:text-gray-500"
          disabled=""
        >
          <svg
            height="1.2em"
            viewBox="0 0 24 24"
            width="1.2em"
          >
            <path
              d="M15.41 16.58L10.83 12l4.58-4.59L14 6l-6 6l6 6z"
              fill="currentColor"
            />
          </svg>
        </button>
         
        <button
          class="w-14 h-12 xl:w-10 xl:h-8 border border-white text-white bg-orange-500 text-lg xl:text-sm font-thin rounded-sm"
        >
          1
        </button>
         
        <div
          class="w-14 h-12 xl:w-10 xl:h-8 flex justify-center items-center font-thin text-lg text-gray-500"
        >
          of 
          1
        </div>
         
        <button
          class="w-14 h-12 xl:w-10 xl:h-8 flex justify-center items-center border border-orange-500 text-2xl xl:text-lg text-orange-500 font-thin rounded-sm disabled:border disabled:border-gray-500 disabled:text-gray-500"
          disabled=""
        >
          <svg
            height="1.2em"
            viewBox="0 0 24 24"
            width="1.2em"
          >
            <path
              d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6z"
              fill="currentColor"
            />
          </svg>
        </button>
         
        <button
          class="w-14 h-12 xl:w-10 xl:h-8 flex justify-center items-center border border-orange-500 text-2xl xl:text-lg text-orange-500 font-thin rounded-sm disabled:border disabled:border-gray-500 disabled:text-gray-500"
          disabled=""
        >
          <svg
            height="1.2em"
            viewBox="0 0 24 24"
            width="1.2em"
          >
            <path
              d="M5.59 7.41L7 6l6 6l-6 6l-1.41-1.41L10.17 12zm6 0L13 6l6 6l-6 6l-1.41-1.41L16.17 12z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
